Settings WebUI: Log error in C++ backend when crostini unshare path fails.

Bug: 907256
Change-Id: If223956a330497b4b0318f91e4ea6c941d94b5aa
Reviewed-on: https://chromium-review.googlesource.com/c/1345377
Commit-Queue: Joel Hockey <joelhockey@chromium.org>
Reviewed-by: Demetrios Papadopoulos <dpapad@chromium.org>
Cr-Commit-Position: refs/heads/master@{#609890}
Former-commit-id: 5953386cf86a633063215375318db5834939ccd3